[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trainer"
version = "0.1.0"
dependencies = [
    "pymem",
    "loguru",
    "dearpygui",
    "pywin32",
    "nuitka",
    "zstandard"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trainer = "trainer.main:main"