[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "trainer"
version = "0.1.0"
dependencies = [
    "pymem",
    "loguru",
    "dearpygui",
    "nuitka",
    "zstandard",
    "blinker",
    "psutil",
    "requests",
]

[tool.setuptools.packages.find]
where = ["src"]